= {project-name} Changelog
:project-name: Asciidoctor PDF
:url-repo: https://github.com/asciidoctor/asciidoctor-pdf

This document provides a high-level view of the changes to the {project-name} by release.
For a detailed view of what has changed, refer to the {url-repo}/commits/main[commit history] on GitHub.

== Unreleased

Improvements::

* add symbols for shift, command, option, and return keys to the fallback font
* allow relative font size for sub and sup to be set independently; support combined setting for backwards compatibility
* allow value of `base-font-size-min` and `<category>-font-size-min` theme keys to be relative (e.g., 0.75em) (#2547)

Bug Fixes::

* always force NULL character to have 0 width, even if missing from font (#2585)
* don't drop line in running content if attribute reference resolves to text that contains attribute reference (not originally present)
* respect hide-uri-scheme when appending URL to link text when media is print or prepress (#2583)
* correctly calculate extent for block in columns that starts below doctitle (#2579)
* support internal link on image (value of link attribute starts with #) (#2572)

Compliance::

* drop support for JRuby 9.2 (require at least Ruby 2.7 compliance)

== 2.3.19 (2024-10-11) - @mojavelinux

Improvements::

* replace OpenStruct with internal ThemeData class for storing theme data (#2535)

Bug Fixes::

* support horizontal alignment on AsciiDoc table cell that only contains paragraphs (#2358)
* don't allow AsciiDoc table cell to overrun bottom of page on which it fits (#2538)
* don't look for NULL glyph in fallback font as this can impact line height (#2541)

=== Details

{url-repo}/releases/tag/v2.3.19[git tag] | {url-repo}/compare/v2.3.18\...v2.3.19[full diff]

== 2.3.18 (2024-07-27) - @mojavelinux

Bug Fixes::

* position foreground image correctly when page layout changes (#2528)

Compliance::
